--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://niedzwk.github.io/React-calc/.",
   "name": "calculator-react",
   "version": "0.1.0",
   "private": true,
